--- a/manifests/operator.yaml
+++ b/manifests/operator.yaml
@@ -257,7 +257,7 @@ spec:
       serviceAccountName: cockroach-operator-sa
       containers:
         - name: cockroach-operator
-          image: cockroachdb/cockroach-operator:
+          image: cockroachdb/cockroach-operator:v1.6.15-rc.3
           imagePullPolicy: IfNotPresent
           # uncomment this to enable different new features
           # args: ["-feature-gates","PartitionedUpdate=true,UseDecommission=true,Upgrade=false, CrdbVersionValidator=false"]
